[gd_scene load_steps=21 format=3 uid="uid://d3hvqb802f4xo"]

[ext_resource type="Script" path="res://games/tophat.gd" id="1_a4a37"]
[ext_resource type="Texture2D" uid="uid://bxbaemctmjotv" path="res://assets/tophats/2024-01-27_21-05-03_5026.png" id="1_hiw2o"]
[ext_resource type="Texture2D" uid="uid://b21g83nym6ee3" path="res://assets/tophats/tophat.svg" id="2_27b23"]
[ext_resource type="Texture2D" uid="uid://8mk3uscwv8uu" path="res://assets/tophats/bunny.svg" id="3_cky06"]
[ext_resource type="Texture2D" uid="uid://dx0x3vi6523ks" path="res://assets/tophats/grabhand.svg" id="4_1keyq"]
[ext_resource type="Texture2D" uid="uid://ccmji8ldk2epv" path="res://assets/tophats/jester.svg" id="4_7lu4t"]
[ext_resource type="Texture2D" uid="uid://b5m0wd5io46mp" path="res://assets/tophats/lhand.svg" id="5_53ker"]
[ext_resource type="Texture2D" uid="uid://bxi8crpgs85u4" path="res://assets/tophats/rhand.svg" id="6_f8hov"]
[ext_resource type="Texture2D" uid="uid://b0jtjqdiipyuk" path="res://assets/tophats/openhand.svg" id="6_ntce8"]

[sub_resource type="Animation" id="Animation_d7jth"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_c4grs"]
resource_name = "shuffle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0001, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2, 0), Vector2(-50, 0), Vector2(50, 0), Vector2(-50, 0), Vector2(50, 0), Vector2(-50, 0), Vector2(50, 0), Vector2(-50, 0), Vector2(50, 0), Vector2(-50, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hands:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hands:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2py2f"]
_data = {
"RESET": SubResource("Animation_d7jth"),
"shuffle": SubResource("Animation_c4grs")
}

[sub_resource type="Animation" id="Animation_um0ow"]
resource_name = "bunny_drop"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(48.571, 59.714), Vector2(128.809, 5.095), Vector2(220, 100), Vector2(220, -150)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rabbit:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.6, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-320, -650)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../jester/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1.2, 1.8, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(566, 238), Vector2(596, 206), Vector2(649.545, 265.818), Vector2(746.338, 142.091), Vector2(693.105, 231.357), Vector2(566, 238)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jq3vp"]
_data = {
"bunny_drop": SubResource("Animation_um0ow")
}

[sub_resource type="Animation" id="Animation_vhv7c"]
resource_name = "change_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../RHat:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-215, 18)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MHat:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(215, -18)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y1buu"]
_data = {
"change_right": SubResource("Animation_vhv7c")
}

[sub_resource type="Animation" id="Animation_1lw12"]
resource_name = "change_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LHat:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(223, 18)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MHat:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-223, -18)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i5q65"]
_data = {
"change_left": SubResource("Animation_1lw12")
}

[sub_resource type="Animation" id="Animation_m3p5s"]
resource_name = "change_middle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LHat:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(433, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RHat:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-433, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tqy54"]
_data = {
"change_middle": SubResource("Animation_m3p5s")
}

[node name="Tophat" type="Node2D"]
script = ExtResource("1_a4a37")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(572, 410)
scale = Vector2(1.16406, 0.824219)
texture = ExtResource("1_hiw2o")

[node name="jester" type="Node2D" parent="."]

[node name="Head" type="Sprite2D" parent="jester"]
position = Vector2(656.789, 233.255)
scale = Vector2(0.408516, 0.408516)
texture = ExtResource("4_7lu4t")

[node name="hands" type="Node2D" parent="jester"]
unique_name_in_owner = true
visible = false
position = Vector2(559, 352)

[node name="LHand" type="Sprite2D" parent="jester/hands"]
position = Vector2(226, 22)
rotation = 0.987856
scale = Vector2(0.418618, 0.418618)
texture = ExtResource("5_53ker")

[node name="RHand" type="Sprite2D" parent="jester/hands"]
position = Vector2(-224, -7)
rotation = -0.445059
scale = Vector2(0.407834, 0.407834)
texture = ExtResource("6_f8hov")

[node name="jester_shuffle" type="AnimationPlayer" parent="jester"]
libraries = {
"": SubResource("AnimationLibrary_2py2f")
}

[node name="secondhand" type="Node2D" parent="."]

[node name="openhand" type="Sprite2D" parent="secondhand"]
position = Vector2(342.914, 278.832)
rotation = -1.55509
scale = Vector2(0.419863, 0.419863)
texture = ExtResource("6_ntce8")

[node name="rabb" type="Sprite2D" parent="secondhand"]
position = Vector2(346.914, 261.832)
scale = Vector2(0.462264, 0.462264)
texture = ExtResource("3_cky06")

[node name="onehand" type="Node2D" parent="."]
visible = false
position = Vector2(220, -150)

[node name="rabbit" type="Sprite2D" parent="onehand"]
position = Vector2(334, 392)
rotation = 3.59014
scale = Vector2(0.426101, 0.426101)
texture = ExtResource("3_cky06")
offset = Vector2(-320, -650)

[node name="grip" type="Sprite2D" parent="onehand"]
position = Vector2(365, 290)
rotation = 4.06836
scale = Vector2(0.435131, 0.435131)
texture = ExtResource("4_1keyq")

[node name="start_anim" type="AnimationPlayer" parent="onehand"]
libraries = {
"": SubResource("AnimationLibrary_jq3vp")
}

[node name="hats" type="Node2D" parent="."]

[node name="pize" type="Node2D" parent="hats"]
visible = false

[node name="Rabbit" type="Sprite2D" parent="hats/pize"]
visible = false
position = Vector2(565, 531)
scale = Vector2(0.468553, 0.468553)
texture = ExtResource("3_cky06")

[node name="Girl" type="Sprite2D" parent="hats/pize"]

[node name="LHat" type="Sprite2D" parent="hats"]
position = Vector2(341, 526)
texture = ExtResource("2_27b23")

[node name="MHat" type="Sprite2D" parent="hats"]
position = Vector2(562, 541)
texture = ExtResource("2_27b23")

[node name="RHat" type="Sprite2D" parent="hats"]
position = Vector2(774, 526)
texture = ExtResource("2_27b23")

[node name="change_right" type="AnimationPlayer" parent="hats"]
root_node = NodePath("../change_left")
libraries = {
"": SubResource("AnimationLibrary_y1buu")
}

[node name="change_left" type="AnimationPlayer" parent="hats"]
libraries = {
"": SubResource("AnimationLibrary_i5q65")
}

[node name="change_middle" type="AnimationPlayer" parent="hats"]
libraries = {
"": SubResource("AnimationLibrary_tqy54")
}
